deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-mongo-deployment
spec:
  selector:
    matchLabels:
      app: todo-mongo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-mongo-app
    spec:
      containers:
      - name: todo-mongo-container
        image: mongo
        ports:
        - containerPort: 27017
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: todo-mongo-service
# spec:
#   selector:
#     app: todo-mongo-app
#   ports:
#   - name: mongo
#     port: 27017
#     targetPort: 27017
#   type: ClusterIP
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: todo-mongo-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: test.com
#     http:
#       paths:
#       - path: /todos
#         pathType: Prefix
#         backend:
#           service:
#             name: todo-mongo-service
#             port:
#               name: mongo
