deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-crud-app
  labels:
    app: mongo-crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-crud-app
  template:
    metadata:
      labels:
        app: mongo-crud-app
    spec:
      containers:
      - name: mongo-crud-app
        image: tonudon86/mongo-crud:0.0.6
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
