service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-mongo-service
spec:
  type: ClusterIP
  selector:
    app: mongo-crud-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
